# Scraper

./: pyproject.toml  setup.cfg
scraper/: __main__.py  bag.py  config.py
scraper/api/: client.py  schemas.py
scraper/emex/: bag.py  surfed.py
